# game_engine_2020

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
Definitely_not_glm/: Definitely_not_glm.sln
Definitely_not_glm/Debug/: Definitely_not_glm.exp  Definitely_not_glm.ilk
Definitely_not_glm/Definitely_not_glm/: Definitely_not_glm.vcxproj  Definitely_not_glm.vcxproj.filters  NotGLM.cpp  NotGLM.h
Definitely_not_glm/Definitely_not_glm/Debug/: Definitely_not_glm.dll.recipe  vc142.idb
Definitely_not_glm/Definitely_not_glm/Debug/Definite.8ce66e47.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Definitely_not_glm.lastbuildstate  Definitely_not_glm.write.1u.tlog  link.20012.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Physics/: ElementPhysics.cpp  ElementPhysics.hpp
app/: CMakeLists.txt  main.cpp
cmake/: CompileOptionsUtils.cmake
doc/: Readme.md
enc_temp_folder/f0c7bcbb29b0cce711eb0171c6fb2d8/: Graphics.cpp
include/: Audio.hpp  Core.hpp  Engine.hpp  EngineWindow.hpp  Graphics.hpp  HID.hpp  utils.hpp
include/Engine/: Core.hpp  Graphics.hpp  HID.hpp  StringUtils.hpp  Utils.hpp  Window.hpp
include/Engine/Exception/: Exception.hpp  ParsingException.hpp
include/Engine/Exceptions/: Exception.hpp  FileException.hpp  GraphicsException.hpp  ParsingException.hpp
include/Engine/Graphics/: Camera.hpp  CommandBuffer.hpp  DebugMessenger.hpp  Descriptor.hpp  Device.hpp  GraphicsPipeline.hpp  Instance.hpp  Mesh.hpp  ObjectBuffers.hpp  ObjectRenderer.hpp  RenderTarget.hpp  Renderpass.hpp  Swapchain.hpp  UniformBufferObject.hpp  Vertex.hpp  VkTools.hpp
include/Engine/Logging/: ConsoleSink.hpp  FileSink.hpp  Level.hpp  Logger.hpp  Logger.ipp  Sink.hpp
include/Engine/Maths/: Constants.hpp  Matrix.hpp  Matrix4.hpp  Matrix4x3.hpp  Quaternions.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
include/Engine/Physics/: Bulletlink.hpp  ElementPhysics.hpp
include/Engine/Resource/: Mesh.hpp  MeshLoader.hpp  MeshResource.hpp  Resource.hpp  ResourceDescriptor.hpp  ResourceManager.hpp  ResourceType.hpp  TextLoader.hpp  TextureLoader.hpp
include/Engine/Resources/: IResourceLoader.hpp  Mesh.hpp  MeshResource.hpp  Resource.hpp  ResourceDescriptor.hpp  ResourceManager.hpp  ResourceType.hpp  ShaderResource.hpp  TextureResource.hpp
include/Engine/Resources/Loaders/Meshes/: MeshObjLoader.hpp  ObjMeshLoader.hpp
include/Engine/Resources/Loaders/Shaders/: SpirvShaderLoader.hpp
include/Engine/Resources/Loaders/Texts/: TextTxtLoader.hpp
include/Engine/Resources/Loaders/Textures/: GenericTextureLoader.hpp  TextureGenericLoader.hpp
include/Engine/ResourcesHID/: ResourceAcceleratorTable.rc
include/Engine/Shader/: vert.spv
include/graphics/: Device.hpp  Instance.hpp  Swapchain.hpp
includeWindows/: Core.hpp  Readme.md
not_glm/: Constants.cpp  Constants.hpp  main.cpp  not_glm_matrix.cpp  not_glm_matrix.hpp  not_glm_matrix4.cpp  not_glm_matrix4.hpp  not_glm_matrix4x3.cpp  not_glm_matrix4x3.hpp  not_glm_quaternions.cpp  not_glm_quaternions.hpp  not_glm_vector.cpp  not_glm_vector.hpp  not_glm_vector2.cpp  not_glm_vector2.hpp  not_glm_vector3.cpp  not_glm_vector3.hpp  not_glm_vector4.cpp  not_glm_vector4.hpp
resources/: resourceAcceleratorTable.h  resourceAcceleratorTable.rc
source/: Audio.cpp  CMakeLists.txt  Core.cpp  Engine.cpp  EngineWindow.cpp  Graphics.cpp  HID.cpp
source/Engine/: Core.cpp  Graphics.cpp  HID.cpp  StringUtils.cpp  Window.cpp
source/Engine/Exception/: Exception.cpp  ParsingException.cpp
source/Engine/Exceptions/: Exception.cpp  FileException.cpp  GraphicsException.cpp  ParsingException.cpp
source/Engine/Graphics/: Camera.cpp  CommandBuffer.cpp  DebugMessenger.cpp  Descriptor.cpp  Device.cpp  GraphicsPipeline.cpp  Instance.cpp  Mesh.cpp  ObjectBuffers.cpp  ObjectRenderer.cpp  RenderTarget.cpp  Renderpass.cpp  Swapchain.cpp  Vertex.cpp  VkTools.cpp
source/Engine/Logging/: ConsoleSink.cpp  FileSink.cpp  Logger.cpp  Sink.cpp
source/Engine/Maths/: Constants.cpp  Matrix.cpp  Matrix4.cpp  Matrix4x3.cpp  Quaternions.cpp  Vector4.cpp  vector2.cpp  vector3.cpp
source/Engine/Physics/: Bulletlink.cpp  ElementPhysics.cpp
source/Engine/Resource/: MeshLoader.cpp  MeshResource.cpp  Resource.cpp  ResourceManager.cpp  TextLoader.cpp  TextureLoader.cpp
source/Engine/Resources/: MeshResource.cpp  Resource.cpp  ResourceManager.cpp  ShaderResource.cpp  TextureResource.cpp
source/Engine/Resources/Loaders/Meshes/: MeshObjLoader.cpp  ObjMeshLoader.cpp
source/Engine/Resources/Loaders/Shaders/: SpirvShaderLoader.cpp
source/Engine/Resources/Loaders/Texts/: TextTxtLoader.cpp
source/Engine/Resources/Loaders/Textures/: GenericTextureLoader.cpp  TextureGenericLoader.cpp
source/graphics/: Device.cpp  Instance.cpp  Swapchain.cpp
